--- a/templates/index.html
+++ b/templates/index.html
@@ -1,77 +1,94 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE+edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" Moview is a recommendation system.">
-    <link rel="shortcut icon" href="../favicon.svg" type="image/svg+xml">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <script src="{{ url_for('static', filename='js/global.js') }}" defer></script>
-    
-    
-    <title>{% block title %}Movie Recommendation System{% endblock %}</title>
-</head>
-<body>
-    <header class="header">
-        <a href="/" class="logo">
-            <img src="{{ url_for('static', filename='images/logo.png') }}" width="140" height="32" alt="Movie Recommendation System home">
-        </a>
+{% extends "base.html" %}
+{% block title %}Home - Movie Recommendation System{% endblock %}
+{% block content %}
 
-        <div class="search-box" search-box>
-            <form action="/movie-list/All" method="GET"> <!-- Assume "/movie-list/All" represents the default movie list URL -->
-                <div class="search-wrapper" search-wrapper>
-                    <input type="text" name="q" aria-label="search movies" placeholder="Search any movies..." class="search-field" autocapitalize="off" search-field>
-                    <img src="{{ url_for('static', filename='images/search.png') }}" width="24" height="24" alt="search" class="leading-icon">
+        <!-- BANNER -->
+        <section class="banner" aria-label="popular movies">
+            <div class="banner-slider">
+                {% for movie in movies %}
+                <div class="slider-item">
+                    <img src="{{ movie.backdrop_path }}" alt="{{ movie.title }}" class="img-cover" loading="eager">
+                    <div class="banner-content">
+                        <h2 class="heading">{{ movie.title }}</h2>
+                        <div class="meta-list">
+                            <div class="meta-item">{{ movie.release_date }}</div>
+                            <div class="meta-item card-badge">{{ movie.vote_average }}</div>
+                        </div>
+                        <p class="banner-text">{{ movie.overview }}</p>
+                        <a href="/detail/{{movie.id}}" class="btn">
+                            <img src="static/images/play_circle.png" width="24" height="24" aria-hidden="true" alt="play circle">
+                            <span class="span">Show Details</span>
+                        </a>
+                    </div>
                 </div>
-                <button type="submit" class="search-btn" search-toggler>
-                    <img src="{{ url_for('static', filename='images/close.png') }}" width="24" height="24" alt="close search box">
+                {% endfor %}
+            </div>
+
+            <!-- Slider controls -->
+            <div class="slider-control">
+                <div class="control-inner">
+                    {% for movie in movies %}
+                    <button class="poster-box slider-control-button">
+                        <img src="{{ movie.poster_path }}" alt="{{ movie.title }}" loading="lazy" draggable="false" class="img-cover">
                 </button>
-            </form>
-        </div>
-
-        <button class="search-btn" search-toggler menu-close>
-            <img src="{{ url_for('static', filename='images/search.png') }}" width="24" height="24"  alt="open search box">
-        </button>
-    </header>
-    <main>
-        <nav class="sidebar" sidebar >
-            <div class="sidebar-inner">
-                <div class="sidebar-list">
-                    
-                        <p class="title">Genre</p>
-                        <a href="/movie-list/Action" menu-close class="sidebar-link">Action</a>
-                        <a href="/movie-list/Horror" menu-close class="sidebar-link">Horror</a>
-                        <a href="/movie-list/Animation" menu-close class="sidebar-link">Animation</a>
-                        <a href="/movie-list/War" menu-close class="sidebar-link">War</a>
-                        <a href="/movie-list/Crime" menu-close class="sidebar-link">Crime</a>
-                        <a href="/movie-list/Comedy" menu-close class="sidebar-link">Comedy</a>
-                        <a href="/movie-list/Adventure" menu-close class="sidebar-link">Adventure</a>
-                        <a href="/movie-list/Mystery" menu-close class="sidebar-link">Mystery</a>
-                        <a href="/movie-list/Drama" menu-close class="sidebar-link">Drama</a>
-                        <a href="/movie-list/Science Fiction" menu-close class="sidebar-link">Sci-Fi</a>
-                        <a href="/movie-list/Fantasy" menu-close class="sidebar-link">Fantasy</a>
-                        <a href="/movie-list/Family" menu-close class="sidebar-link">Family</a>
-                        <a href="/movie-list/Music" menu-close class="sidebar-link">Music</a>
-                        <a href="/movie-list/History" menu-close class="sidebar-link">History</a>
-                        <a href="/movie-list/Romance" menu-close class="sidebar-link">Romance</a>
-                        <a href="/movie-list/Thriller" menu-close class="sidebar-link">Thriller</a>
-                </div>
-                <div class="sidebar-footer">
-                    <p class="copyright">
-                        Copyright 2024 
-                    </p>
-                    <img src="{{ url_for('static', filename='images/tmdb-logo.png') }}" width="130" height="17" alt="the movie database logo">
+                    {% endfor %}
                 </div>
             </div>
-        </nav>
-        
-        <article class="container" page-content>
-            {% block content %}   {% endblock %}
-        </article>
-    </main>
-</body>
-</html>
+
+        </section>
+ 
+
+        <!-- MOVIE LIST -->
+        <section class="movie-list" aria-label="upcoming movie">
+            <div class="title-wrapper">
+                <h3 class="title-large">Popular Movies</h3>
+            </div>
+            <div class="slider-list">
+                <div class="slider-inner">
+                    {% for movie in popular %}
+                    <div class="movie-card">
+                        <figure class="poster-box card-banner">
+                            <img src="{{ movie.poster_path }}" alt="{{ movie.title }}" class="img-cover">
+                        </figure>
+                        <h4 class="title">{{ movie.title }}</h4>
+                        <div class="meta-list">
+                            <div class="meta-item">
+                                <img src="static/images/star.png" width="20" height="20" loading="lazy" alt="rating">
+                                <span class="span">{{ movie.vote_average }}</span>
+                            </div>
+                            <div class="card-badge">{{ movie.release_date }}</div>
+                        </div>
+                        <a href="/detail/{{movie.id}}" class="card-btn" title="{{ movie.title }}"></a>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </section>
+        <section class="movie-list" aria-label="upcoming movie">
+            <div class="title-wrapper">
+                <h3 class="title-large">All Time Trending Movies</h3>
+            </div>
+            <div class="slider-list">
+                <div class="slider-inner">
+                    {% for movie in trending %}
+                    <div class="movie-card">
+                        <figure class="poster-box card-banner">
+                            <img src="{{ movie.poster_path }}" alt="{{ movie.title }}" class="img-cover">
+                        </figure>
+                        <h4 class="title">{{ movie.title }}</h4>
+                        <div class="meta-list">
+                            <div class="meta-item">
+                                <img src="static/images/star.png" width="20" height="20" loading="lazy" alt="rating">
+                                <span class="span">{{ movie.vote_average }}</span>
+                            </div>
+                            <div class="card-badge">{{ movie.release_date }}</div>
+                        </div>
+                        <a href="/detail/{{movie.id}}" class="card-btn" title="{{ movie.title }}"></a>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </section>
+    
+        <script src="{{ url_for('static', filename='js/index.js') }}" type="module"></script>
+{% endblock %}
